_includes/manuals/2.4/3.6_upgrade.md
#### Scope

**These instructions apply to environments not using Katello**

If you're using the [Katello]({{ site.baseurl }}plugins/katello) content management plugin scenario,
please follow their upgrade instructions (which will also upgrade Foreman).

#### Preparation

**Before updating to {{page.version}}, make sure you have successfully upgraded to {{page.previous_version}} first.**

Upgrading across more than one version is not supported, so it's required to upgrade to each
intermediate version and follow all upgrade instructions for the previous versions.

Check the list of [Supported Platforms](manuals/{{page.version}}/index.html#3.1.1SupportedPlatforms)
when planning to upgrade, as these change between releases. If your OS is no
longer supported by Foreman, migrate or upgrade the OS (if supported) using a
release of Foreman supported by both OS versions before upgrading Foreman.

<script type="text/javascript">
function update_upgrade_os(select) {
  var os = select.value;
  $(".upgrade_os").hide();
  if (os) {
    $(".upgrade_os_"+os).show();
  } else {
    $(".upgrade_os_none").show();
  }
}
$(document).ready(function() {
        $('#upgrade_os').trigger('change');
});
</script>

To provide specific installation instructions, please select your operating system:
<select id="upgrade_os" onChange="update_upgrade_os(this);">
  <option value="none">-- select operating system --</option>
  <option value="el7">CentOS 7 / Red Hat Enterprise Linux 7</option>
  <option value="el8">CentOS 8 / Red Hat Enterprise Linux 8</option>
  <option value="debian10">Debian 10 (Buster)</option>
  <option value="ubuntu1804">Ubuntu 18.04 (Bionic)</option>
</select>

#### Step 1 - Backup

It is recommended that you backup your database and modifications to Foreman
files(config/settings.yaml, unattended installations etc).  Most upgrades are
safe but it never hurts to have a backup just in case.

For more information about how to backup your instance head over to
[Backup](manuals/{{page.version}}/index.html#5.5.1Backup)

#### Step 2 - Perform the upgrade

Before proceeding, it is necessary to shutdown the Foreman instance.

<div class="upgrade_os upgrade_os_none">
  <i>No operating system selected.</i>
</div>
<div class="upgrade_os upgrade_os_el7 upgrade_os_el8">
{% highlight bash %}
systemctl stop httpd foreman.service foreman.socket dynflow\*
{% endhighlight %}
</div>
<div class="upgrade_os upgrade_os_debian10 upgrade_os_ubuntu1804">
{% highlight bash %}
systemctl stop apache2 foreman.service foreman.socket dynflow\*
{% endhighlight %}
</div>

Now it's time to perform the actual upgrade.

<div class="upgrade_os upgrade_os_none">
  <i>No operating system selected.</i>
</div>

<div class="upgrade_os upgrade_os_el7">
To upgrade an existing Foreman installation, first update with the
appropriate foreman-release package:

{% highlight bash %}
yum upgrade https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
{% endhighlight %}

Also make sure centos-release-scl-rh is up to date:

{% highlight bash %}
yum upgrade centos-release-scl-rh
{% endhighlight %}

Clean up the yum metadata cache:

{% highlight bash %}
yum clean metadata
{% endhighlight %}

Next upgrade all Foreman packages:

{% highlight bash %}
yum upgrade tfm\* ruby\* foreman\*
{% endhighlight %}

Optionally, consider removing unused SCL packages:

{% highlight bash %}
yum erase rh-ruby22\* rh-ruby24\* rh-ror42\* tfm-ror52\*
{% endhighlight %}
</div>

<div class="upgrade_os upgrade_os_el8">
To upgrade an existing Foreman installation, first update with the
appropriate foreman-release package:

{% highlight bash %}
dnf upgrade https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
{% endhighlight %}

Clean up the yum metadata cache:

{% highlight bash %}
dnf clean metadata
{% endhighlight %}

Next upgrade all Foreman packages:

{% highlight bash %}
dnf upgrade ruby\* foreman\*
{% endhighlight %}

Foreman runs best on PostgreSQL 12 but the default version on EL8 is 10. It is recommended to upgrade by [switching module streams](https://docs.fedoraproject.org/en-US/modularity/using-modules-switching-streams/).

First check which version of PostgreSQL is currently installed:

{% highlight bash %}
rpm -qv postgresql-server
{% endhighlight %}

If you're already on 12 or don't have the PostgreSQL server installed, you can continue with step 3. Otherwise upgrade:

{% highlight bash %}
systemctl stop postgresql.service
# https://bugzilla.redhat.com/1935301
sed -i '/^data_directory =/d' /var/lib/pgsql/data/postgresql.conf
dnf -y module reset postgresql
dnf -y module install postgresql:12
dnf install postgresql-upgrade
postgresql-setup --upgrade
systemctl start postgresql.service
{% endhighlight %}
</div>

<div class="upgrade_os upgrade_os_debian10 upgrade_os_ubuntu1804">
Upgrading from the last release to {{page.version}} has been tested. Updating
the packages will upgrade the application and automatically migrate the
database.

First edit `/etc/apt/sources.list.d/foreman.list` and change the release
number from the previous release to `{{ page.version }}`:

<div class="upgrade_os upgrade_os_debian10">
{% highlight bash %}
deb http://deb.theforeman.org/ buster {{ page.version }}
deb http://deb.theforeman.org/ plugins {{ page.version }}
{% endhighlight %}
</div>
<div class="upgrade_os upgrade_os_ubuntu1804">
{% highlight bash %}
deb http://deb.theforeman.org/ bionic {{ page.version }}
deb http://deb.theforeman.org/ plugins {{ page.version }}
{% endhighlight %}
</div>

Next upgrade all Foreman packages:

{% highlight bash %}
apt-get update
apt-get --only-upgrade install ruby\* foreman\*
{% endhighlight %}
</div>

#### Step 3 - Post-upgrade steps

##### Step 3 (A) - Database migration and cleanup

Make sure by executing database is migrated. It should produce no errors or
output:

    foreman-rake db:migrate
    foreman-rake db:seed

You should clear the cache and the existing sessions:

    foreman-rake tmp:cache:clear
    foreman-rake db:sessions:clear

##### Optional Step 3 (B) - Reclaim database space

After database migrations, some space can sometimes be reclaimed. It's a good idea to perform a *full* database vacuum for PostgreSQL rather than relying on the autovacuum feature to claim maximum space possible.

    su - postgres -c 'vacuumdb --full --dbname=foreman'

##### Optional Step 3 (C) - Run foreman-installer

If you used foreman-installer to set up your existing Foreman instance we
recommend running it again after upgrading. Note that the installer can
modify config files so this may overwrite your custom changes. You can run
the installer in noop mode so you can see what would be changed.

To see what would happen

    foreman-installer --noop --verbose

You may see ERRORS such as `/Stage[main]/Foreman_proxy::Register/Foreman_smartproxy[foreman-hostname.domain]:` `Could not evaluate: Connection refused - connect(2)` due to httpd / apache2 service being stopped.  These can be safely ignored.

To apply these changes, run the installer again without options

    foreman-installer

##### Optional Step 3 (D) - Update config files
<div class="upgrade_os upgrade_os_none">
  <i>*No operating system selected.*</i>
</div>
<div class="upgrade_os upgrade_os_el7">
In order to catch all configuration changes and manage them properly you should install and run
rpmconf from the EPEL repository along with vim-enhanced (for vimdiff).

{% highlight bash %}
rpmconf -a --frontend=vimdiff
{% endhighlight %}
</div>
<div class="upgrade_os upgrade_os_el8 upgrade_os_debian10 upgrade_os_ubuntu1804">
This step is irrelevant for the chosen operating system.
</div>

##### Step 4 - Restart

Start the application server. This is redundant if you previously ran `foreman-installer` in step 3B.

<div class="upgrade_os upgrade_os_none">
  <i>*No operating system selected.*</i>
</div>
<div class="upgrade_os upgrade_os_el7 upgrade_os_el8">
{% highlight bash %}
systemctl start httpd foreman.service foreman.socket
{% endhighlight %}
</div>
<div class="upgrade_os upgrade_os_debian10 upgrade_os_ubuntu1804">
{% highlight bash %}
systemctl start apache2 foreman.service foreman.socket
{% endhighlight %}
</div>

#### Common issues

See
[Troubleshooting](http://projects.theforeman.org/projects/foreman/wiki/Troubleshooting)
