_includes/manuals/3.0/3.6_upgrade.md
#### Scope

**These instructions apply to environments not using Katello**

If you're using the [Katello]({{ site.baseurl }}plugins/katello) content management plugin scenario,
please follow their upgrade instructions (which will also upgrade Foreman).

#### Preparation

**Before updating to {{page.version}}, make sure you have successfully upgraded to {{page.previous_version}} first.**

Upgrading across more than one version is not supported, so it's required to upgrade to each
intermediate version and follow all upgrade instructions for the previous versions.

Check the list of [Supported Platforms](manuals/{{page.version}}/index.html#3.1.1SupportedPlatforms)
when planning to upgrade, as these change between releases. If your OS is no
longer supported by Foreman, migrate or upgrade the OS (if supported) using a
release of Foreman supported by both OS versions before upgrading Foreman.

<script type="text/javascript">
function update_upgrade_os(select) {
  var os = select.value;
  $(".upgrade_os").hide();
  if (os) {
    $(".upgrade_os_"+os).show();
  } else {
    $(".upgrade_os_none").show();
  }
}
$(document).ready(function() {
        $('#upgrade_os').trigger('change');
});
</script>

To provide specific installation instructions, please select your operating system:
<select id="upgrade_os" onChange="update_upgrade_os(this);">
  <option value="none">-- select operating system --</option>
  <option value="el7">CentOS 7 / Red Hat Enterprise Linux 7</option>
  <option value="el8">CentOS 8 / CentOS 8 Stream / Red Hat Enterprise Linux 8</option>
  <option value="debian10">Debian 10 (Buster)</option>
  <option value="ubuntu1804">Ubuntu 18.04 (Bionic)</option>
  <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
</select>

#### Step 1 - Backup

It is recommended that you backup your database and modifications to Foreman
files(config/settings.yaml, unattended installations etc).  Most upgrades are
safe but it never hurts to have a backup just in case.

For more information about how to backup your instance head over to
[Backup](manuals/{{page.version}}/index.html#5.5.1Backup)

#### Step 2 - Perform the upgrade

Before proceeding, it is necessary to shutdown the Foreman instance.

<div class="upgrade_os upgrade_os_none">
  <i>No operating system selected.</i>
</div>
<div class="upgrade_os upgrade_os_el7 upgrade_os_el8">
{% highlight bash %}
systemctl stop httpd foreman.service foreman.socket dynflow\*
{% endhighlight %}
</div>
<div class="upgrade_os upgrade_os_debian10 upgrade_os_ubuntu1804 upgrade_os_ubuntu2004">
{% highlight bash %}
systemctl stop apache2 foreman.service foreman.socket dynflow\*
{% endhighlight %}
</div>

Now it's time to perform the actual upgrade.

<div class="upgrade_os upgrade_os_none">
  <i>No operating system selected.</i>
</div>

<div class="upgrade_os upgrade_os_el7">
To upgrade an existing Foreman installation, first update with the
appropriate foreman-release package:

{% highlight bash %}
yum upgrade https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
{% endhighlight %}

Also make sure centos-release-scl-rh is up to date:

{% highlight bash %}
yum upgrade centos-release-scl-rh
{% endhighlight %}

Clean up the yum metadata cache:

{% highlight bash %}
yum clean metadata
{% endhighlight %}

Next upgrade all Foreman packages:

{% highlight bash %}
yum upgrade tfm\* ruby\* foreman\*
{% endhighlight %}

If you wish to continue using Puppet:

{% highlight bash %}
yum install foreman-plugin-puppet
{% endhighlight %}

Optionally, consider removing unused SCL packages:

{% highlight bash %}
yum erase rh-ruby22\* rh-ruby24\* rh-ror42\* tfm-ror52\* rh-ruby25\*
{% endhighlight %}
</div>

<div class="upgrade_os upgrade_os_el8">
To upgrade an existing Foreman installation, first update with the
appropriate foreman-release package:

{% highlight bash %}
dnf upgrade https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
{% endhighlight %}

Clean up the yum metadata cache:

{% highlight bash %}
dnf clean metadata
{% endhighlight %}

Enable the Ruby 2.7 module:

{% highlight bash %}
dnf -y module reset ruby
dnf -y module enable ruby:2.7
{% endhighlight %}

Next upgrade all Foreman packages:

{% highlight bash %}
dnf upgrade ruby\* foreman\*
{% endhighlight %}

If you wish to continue using Puppet:

{% highlight bash %}
dnf install foreman-plugin-puppet
{% endhighlight %}
</div>

<div class="upgrade_os upgrade_os_debian10 upgrade_os_ubuntu1804 upgrade_os_ubuntu2004">
Upgrading from the last release to {{page.version}} has been tested. Updating
the packages will upgrade the application and automatically migrate the
database.

First edit `/etc/apt/sources.list.d/foreman.list` and change the release
number from the previous release to `{{ page.version }}`:

<div class="upgrade_os upgrade_os_debian10">
{% highlight bash %}
deb http://deb.theforeman.org/ buster {{ page.version }}
deb http://deb.theforeman.org/ plugins {{ page.version }}
{% endhighlight %}
</div>
<div class="upgrade_os upgrade_os_ubuntu1804">
{% highlight bash %}
deb http://deb.theforeman.org/ bionic {{ page.version }}
deb http://deb.theforeman.org/ plugins {{ page.version }}
{% endhighlight %}
</div>
<div class="upgrade_os upgrade_os_ubuntu2004">
{% highlight bash %}
deb http://deb.theforeman.org/ focal {{ page.version }}
deb http://deb.theforeman.org/ plugins {{ page.version }}
{% endhighlight %}
</div>

Then import the new release GPG key ([5B7C3E5A735BCB4D615829DC0BDDA991FD7AAC8A](https://theforeman.org/static/keys/5B7C3E5A735BCB4D615829DC0BDDA991FD7AAC8A.pub)):

{% highlight bash %}
wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
{% endhighlight %}

Next upgrade all Foreman packages:

{% highlight bash %}
apt-get update
apt-get --only-upgrade install ruby\* foreman\*
{% endhighlight %}

If you wish to continue using Puppet:

{% highlight bash %}
apt-get install ruby-foreman-puppet
{% endhighlight %}
</div>

#### Step 3 - Post-upgrade steps

##### Step 3 (A) - Database migration and cleanup

Make sure by executing database is migrated. It should produce no errors or
output:

    foreman-rake db:migrate
    foreman-rake db:seed

You should clear the cache and the existing sessions:

    foreman-rake tmp:cache:clear
    foreman-rake db:sessions:clear

##### Optional Step 3 (B) - Reclaim database space

After database migrations, some space can sometimes be reclaimed. It's a good idea to perform a *full* database vacuum for PostgreSQL rather than relying on the autovacuum feature to claim maximum space possible.

    su - postgres -c 'vacuumdb --full --dbname=foreman'

##### Optional Step 3 (C) - Run foreman-installer

If you used foreman-installer to set up your existing Foreman instance we
recommend running it again after upgrading. Note that the installer can
modify config files so this may overwrite your custom changes. You can run
the installer in noop mode so you can see what would be changed.

To see what would happen

    foreman-installer --noop --verbose

You may see ERRORS such as `/Stage[main]/Foreman_proxy::Register/Foreman_smartproxy[foreman-hostname.domain]:` `Could not evaluate: Connection refused - connect(2)` due to httpd / apache2 service being stopped.  These can be safely ignored.

To apply these changes, run the installer again without options

    foreman-installer

##### Optional Step 3 (D) - Update config files
<div class="upgrade_os upgrade_os_none">
  <i>*No operating system selected.*</i>
</div>
<div class="upgrade_os upgrade_os_el7">
In order to catch all configuration changes and manage them properly you should install and run
rpmconf from the EPEL repository along with vim-enhanced (for vimdiff).

{% highlight bash %}
rpmconf -a --frontend=vimdiff
{% endhighlight %}
</div>
<div class="upgrade_os upgrade_os_el8 upgrade_os_debian10 upgrade_os_ubuntu1804 upgrade_os_ubuntu2004">
This step is irrelevant for the chosen operating system.
</div>

##### Step 4 - Restart

Start the application server. This is redundant if you previously ran `foreman-installer` in step 3B.

<div class="upgrade_os upgrade_os_none">
  <i>*No operating system selected.*</i>
</div>
<div class="upgrade_os upgrade_os_el7 upgrade_os_el8">
{% highlight bash %}
systemctl start httpd foreman.service foreman.socket
{% endhighlight %}
</div>
<div class="upgrade_os upgrade_os_debian10 upgrade_os_ubuntu1804 upgrade_os_ubuntu2004">
{% highlight bash %}
systemctl start apache2 foreman.service foreman.socket
{% endhighlight %}
</div>

#### Common issues

See
[Troubleshooting](http://projects.theforeman.org/projects/foreman/wiki/Troubleshooting)
